--- a/.actions_RENAME_ME/workflows/release.yml
+++ b/.actions_RENAME_ME/workflows/release.yml
@@ -69,6 +69,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: [setup]
     if: needs.setup.outputs.should_release == 'true'
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
